--- a/src/app/layout/blog-three/blog-three.component.scss
+++ b/src/app/layout/blog-three/blog-three.component.scss
@@ -147,3 +147,14 @@ section.home.amazonhome2 .heading-product h1 {
     line-height: 27px;
     padding: 0px 0pc 2pc;
 }
+
+.loader{
+    width: 301px;
+    height: auto;
+    padding:8pc 0 11pc;
+    margin: 0 auto;
+    display: block;
+}
+.loaderload{
+    min-height: 100vh;
+}
