--- a/src/app/layout/blog/blog.component.scss
+++ b/src/app/layout/blog/blog.component.scss
@@ -175,3 +175,14 @@ section.home.amazonhome2 .heading-product h1 {
 :focus{
     outline: transparent;
 }
+
+.loader{
+    width: 301px;
+    height: auto;
+    padding:8pc 0 11pc;
+    margin: 0 auto;
+    display: block;
+}
+.loaderload{
+    min-height: 100vh;
+}
