--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -688,69 +688,76 @@
                 <div class="products-text">
                     <div class="products_all">
                         <h1> Find your ideal TV </h1>
-                        <a>
-                            <img src="/assets/images/all1.jpg">
+                        <a target="_blank" href='https://www.amazon.in'>
+                            <img  src="/assets/images/all1.jpg">
                         </a>
-                        <p>View More</p>
+                        <a target="_blank" href='https://www.amazon.in'>
+                            View More</a>
                     </div>
                     <div class="products_all">
                         <h1> Get fit at home
                         </h1>
-                        <a>
-                            <img src="/assets/images/all2.jpg">
+                        <a target="_blank" href='https://www.amazon.in'>
+                            <img  src="/assets/images/all2.jpg">
                         </a>
-                        <p>View More</p>
+                        <a target="_blank" href='https://www.amazon.in'>
+                            View More</a>
                     </div>
                 </div>
                 <div class="products-text">
                     <div class="products_all">
                         <h1> Shop by Category
                         </h1>
-                        <a>
-                            <img src="/assets/images/all3.jpg">
+                        <a target="_blank" href='https://www.amazon.in'>
+                            <img  src="/assets/images/all3.jpg">
                         </a>
-                        <p>View More</p>
+                        <a target="_blank" href='https://www.amazon.in'>
+                            View More</a>
                     </div>
                     <div class="products_all">
                         <h1>Best Wooden Matrial </h1>
-                        <a>
-                            <img src="/assets/images/all4.jpg">
+                        <a target="_blank" href='https://www.amazon.in'>
+                            <img  src="/assets/images/all4.jpg">
                         </a>
-                        <p>View More</p>
+                        <a target="_blank" href='https://www.amazon.in'>
+                            View More</a>
                     </div>
                 </div>
                 <div class="products-text">
                     <div class="products_all">
                         <h1> Find All Baby Products </h1>
-                        <a>
+                        <a target="_blank" href='https://www.amazon.in'>
                             <img src="/assets/images/all5.jpg">
                         </a>
-                        <p>View More</p>
+                        <a target="_blank" href='https://www.amazon.in'>
+                            View More</a>
                     </div>
                     <div class="products_all">
                         <h1>Shop by Category
                         </h1>
-                        <a>
+                        <a target="_blank" href='https://www.amazon.in'>
                             <img src="/assets/images/all6.jpg">
                         </a>
-                        <p>View More</p>
+                        <a target="_blank" href='https://www.amazon.in'>
+                            View More</a>
                     </div>
                 </div>
                 <div class="products-text lastpic-d">
                     <div class="products_all">
-                        <a class="imgb">
+                        <a class="imgb" target="_blank" href='https://www.amazon.in'>
                             <img src="/assets/images/off4.jpg">
                         </a>
                         <div class="products_all mid-img-p">
                             <h1>Shop by Category
                             </h1>
-                            <a>
-                                <img src="/assets/images/all7.jpg">
+                            <a target="_blank" href='https://www.amazon.in'>
+                                <img  src="/assets/images/all7.jpg">
                             </a>
-                            <p>View More</p>
+                            <!-- <a target="_blank" href='https://www.amazon.in'>
+                             View More</a> -->
                         </div>
-                        <a class="imgb">
-                            <img src="/assets/images/off3.jpg">
+                        <a class="imgb" target="_blank" href='https://www.amazon.in'>
+                            <img  src="/assets/images/off3.jpg">
                         </a>
                     </div>
                 </div>
@@ -820,8 +827,9 @@
                     <div class="img-slider" fxFlex="20%" fxFlex.md="28%" fxFlex.xs="99%%" fxFlex.sm="99%">
                         <div class="slide1-img">
                             <div class="slide1-img">
-                                <img src="/assets/images/off4.jpg">
-                                <img src="/assets/images/off1.jpg">
+                               <a target="_blank" href='https://www.amazon.in'> <img src="/assets/images/off4.jpg"> </a>
+                               <a target="_blank" href='https://www.amazon.in'>
+                                     <img src="/assets/images/off1.jpg"> </a>
                             </div>
 
                         </div>
@@ -2095,7 +2103,7 @@
                     </div>
                 </div>
 
-               
+
 
                 <div class="Product">
                     <div class="newatricel">
