--- a/src/app/layout/blog-three/blog-three.component.html
+++ b/src/app/layout/blog-three/blog-three.component.html
@@ -1,6 +1,6 @@
 <section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
-    <div class="ft" *ngIf="dataload">
-        <mat-spinner></mat-spinner>
+    <div class="ft loaderload" *ngIf="dataload"> 
+        <img class="loader" src="assets/images/loader.gif">
     </div>
     <div *ngIf="!dataload">
 
