--- a/src/app/layout/category/category.component.html
+++ b/src/app/layout/category/category.component.html
@@ -1,7 +1,7 @@
 <section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
 
-    <div class="ft" *ngIf="dataload">
-        <mat-spinner></mat-spinner>
+    <div class="ft loaderload" *ngIf="dataload"> 
+        <img class="loader" src="assets/images/loader.gif">
     </div>
     <div *ngIf="!dataload">
 
@@ -24,7 +24,7 @@
                 <div class="product-amazonall" fxLayout="row">
                     <div class="product-amazon" *ngFor="let product of products">
                         <div class="text">
-                            <h3> {{product.productName}}</h3>
+                            <h3> {{product.productName | slice:0:25}}</h3>
                             <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
                                 <div class="price">
                                     <u> {{product.originalPrice}} </u> ₹{{product.sellPrice}}
