--- a/src/app/layout/category/category.component.scss
+++ b/src/app/layout/category/category.component.scss
@@ -5,11 +5,7 @@
     width: 100%;
     height: 55px;
 }
-.ft{
-    min-height: 100vh;
-    padding: 15pc 0 0;
 
-}
 section.home {
     min-height: 100vh;
 }
@@ -73,20 +69,7 @@ section.home {
     text-decoration: line-through;
     color: #999696;
 }
-// .viewer mat-icon.add{
-//     background: #ffd715;
-//     border-radius: 2px;
-//     color: #fff;
-//     font-size: 16px;
-//     text-align: center;
-//     height: 25px;
-//     width: 25px;
-//     line-height: 25px;
-//     position: absolute;
-//     top: unset;
-//     bottom: unset;
-//     margin: -2pc;
-// }
+
 mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
     content: "";
     margin: 0 0.5em;
@@ -103,9 +86,6 @@ mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color:after {
     margin: 20px 0px 0;
     
 }
-
-
-
 
 .iconmore mat-icon.mat-icon.notranslate.add.material-icons.mat-icon-no-color {
     color: #fff;
@@ -337,4 +317,14 @@ section.home.amazonhome3 .text ul {
     font-family: "Cabin", sans-serif;
 }.img a img {
     object-fit: contain;
+}
+.loader{
+    width: 301px;
+    height: auto;
+    padding:8pc 0 11pc;
+    margin: 0 auto;
+    display: block;
+}
+.loaderload{
+    min-height: 100vh;
 }
