--- a/src/app/layout/all-blogs/all-blogs.component.html
+++ b/src/app/layout/all-blogs/all-blogs.component.html
@@ -1,7 +1,7 @@
 <div class="new-featured-amazon arrive topdeal" ngClass.lt-xl="amazonhome5">
 
     <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-        fxFlex.lg="1270px" fxFlex.xl="1800px" >
+        fxFlex.lg="1270px" fxFlex.xl="1800px">
         <div class="category-amazon" fxLayout="row">
             <div class="top-line">
                 <div class="single-line">
@@ -83,6 +83,13 @@
                     </div>
                 </div>
             </div>
+            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-f9+5v+4m-d8+7b"
+                data-ad-client="ca-pub-7582359274073375" data-ad-slot="6189008409"></ins>
         </div>
+
+        <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
+            data-ad-format="fluid" data-ad-client="ca-pub-7582359274073375" data-ad-slot="6818729641"></ins>
+
+
     </div>
 </div>
