--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -20,8 +20,8 @@
 
             <!----category-line-->
             <div class="imgvedio">
-                <a target="_blank">
-                    <img *ngIf="movie.image" src={{movie.image}}></a>
+                <!-- <a target="_blank">
+                    <img *ngIf="movie.image" src={{movie.image}}></a> -->
                 <div class="vedios" [innerHtml]="x">
                     <!-- <iframe  src={{movie.youtube}} title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </div>
@@ -71,7 +71,7 @@
                     {{paragraph.para  | slice:0:222}}
                 </p> -->
             </div>
-            <h1 class="castheadig">Movie Cast</h1>
+            <!-- <h1 class="castheadig">Movie Cast</h1>
             <div class="cast" fxLayout="row">
               
                 <div class="castdata">
@@ -129,9 +129,10 @@
                     <h5>Aator</h5>
                 </div>
               
-            </div>
+            </div> -->
 
             <div class="category reviewmovieblogs" fxLayout="row">
+
                 <div class="category" fxLayout="column">
                     <!--<div class="heading-product">
                     <h1> {{blog.title}}</h1>
@@ -182,6 +183,11 @@
                     </div>
 
                     <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" class="reviewalluser">
+
+                        <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                            data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                            data-ad-slot="6189008409"></ins>
+
                         <div class="img-product" fxFlex="65%" fxFlex.xs="100%" fxFlex.sm="100%" fxLayout="row">
                             <div class="heading-productreview">
                                 <h1>USERS' REVIEWS </h1>
@@ -227,7 +233,7 @@
                             </div>
                         </div>
 
-                        <div class="sidebarsec" fxFlex="35%" fxLayout="column" fxFlex.xs="100%" fxFlex.sm="100%">
+                        <!-- <div class="sidebarsec" fxFlex="35%" fxLayout="column" fxFlex.xs="100%" fxFlex.sm="100%">
                             <h1>Upcoming shows movies</h1>
                             <ul>
                                 <li><a>Valimai: The Power <p>Action/Thriller</p></a>
@@ -264,7 +270,12 @@
                                     <b>Apr 2022</b>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
+
+                        <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
+                            data-ad-format="fluid" data-ad-client="ca-pub-7582359274073375"
+                            data-ad-slot="6818729641"></ins>
+
                     </div>
                 </div>
             </div>
