--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,5 +1,5 @@
 <section class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2" ngClass.md="amazonhome3">
-    <div class="ft loaderload" *ngIf="dataload"> 
+    <div class="ft loaderload" *ngIf="dataload">
         <img class="loader" src="assets/images/loader.gif">
     </div>
     <div *ngIf="!dataload">
@@ -16,13 +16,15 @@
         </div>
         <!----category-line-->
         <div class="category" fxLayout="row">
+            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-f9+5v+4m-d8+7b"
+                data-ad-client="ca-pub-7582359274073375" data-ad-slot="6189008409"></ins>
             <div class="category" fxLayout="column" fxFlex.xs="97%" fxFlex.sm="590px" fxFlex.md="950px"
                 fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading-product">
                     <h1> {{blog.title}}</h1>
                 </div>
                 <!-- <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column"> -->
-                        <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
 
                     <div class="img-product" fxFlex="40%" fxLayout="row">
                         <a href={{blog.productLink}} target="_blank">
@@ -65,28 +67,30 @@
                             {{paragraph.para}}
                         </p>
 
-                     
+
 
 
                     </div>
                 </div>
-                <div class="heading-product" >
-                <p *ngFor="let paragraph of blog.paragraphTwo">
-                    {{paragraph.para}}
-                </p>
+                <div class="heading-product">
+                    <p *ngFor="let paragraph of blog.paragraphTwo">
+                        {{paragraph.para}}
+                    </p>
 
-                <p *ngFor="let paragraph of blog.paragraphThree">
-                    {{paragraph.para}}
-                </p>
+                    <p *ngFor="let paragraph of blog.paragraphThree">
+                        {{paragraph.para}}
+                    </p>
 
-                <button class="buy">
-                    <a target="blank" href="{{blog.productLink}}">
-                        <mat-icon>play_arrow</mat-icon>Buy Now
-                    </a>
-                </button>
+                    <button class="buy">
+                        <a target="blank" href="{{blog.productLink}}">
+                            <mat-icon>play_arrow</mat-icon>Buy Now
+                        </a>
+                    </button>
+                </div>
             </div>
         </div>
-        </div>
+        <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
+            data-ad-format="fluid" data-ad-client="ca-pub-7582359274073375" data-ad-slot="6818729641"></ins>
 
     </div>
 </section>
