--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -233,7 +233,7 @@
                             </div>
                         </div>
 
-                        <!-- <div class="sidebarsec" fxFlex="35%" fxLayout="column" fxFlex.xs="100%" fxFlex.sm="100%">
+                        <div class="sidebarsec" fxFlex="35%" fxLayout="column" fxFlex.xs="100%" fxFlex.sm="100%">
                             <h1>Upcoming shows movies</h1>
                             <ul>
                                 <li><a>Valimai: The Power <p>Action/Thriller</p></a>
@@ -270,7 +270,7 @@
                                     <b>Apr 2022</b>
                                 </li>
                             </ul>
-                        </div> -->
+                        </div>
 
                         <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
                             data-ad-format="fluid" data-ad-client="ca-pub-7582359274073375"
