--- a/src/app/layout/all-movies/all-movies.component.html
+++ b/src/app/layout/all-movies/all-movies.component.html
@@ -1,50 +1,204 @@
-<div class="new-featured-amazon arrive topdeal" ngClass.lt-xl="amazonhome5">
+<!-- <div *ngIf="dataload" class="loaderload"> -->
+<div *ngIf="dataload" class="loaderload">
+    <img class="loader" src="/assets/images/load.gif">
+</div>
 
+<div  *ngIf="dataloadline" class="new-featured-amazon arrive topdeal movietab" ngClass.lt-xl="amazonhome5">
     <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
         fxFlex.lg="1270px" fxFlex.xl="1800px">
-        <div class="category-amazon" fxLayout="row">
+        <!-- <div class="category-amazon" fxLayout="row">
             <div class="top-line">
                 <div class="single-line">
                     <b class="home" routerLink="/">Home</b>
                     <mat-icon>keyboard_arrow_right</mat-icon> <b><a>Movies Reviews</a></b>
                 </div>
             </div>
-        </div>
-        <div *ngIf="dataload" class="loaderload">
-            <img class="loader" src="assets/images/loader.gif">
-        </div>
+        </div> -->
 
-
-        <div class="new-featured-amazon arrive blog">
-            <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-f9+5v+4m-d8+7b"
-                data-ad-client="ca-pub-7582359274073375" data-ad-slot="6189008409"></ins>
-
-
-            <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
-                <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="25%">
-                    <div class="headingMovie">
-                        <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
-                            <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
-                                <img src={{movie.imageTwo}}></a>
-
-                            <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
-                                <div class="review">
-                                    <mat-icon>star_border</mat-icon>
-                                    <span>( {{movie.averageUserRating}}/5)</span>
+        <mat-tab-group mat-align-tabs="start">
+            <mat-tab label="All">
+                <div class="new-featured-amazon arrive blog">
+                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                        data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                        data-ad-slot="6189008409"></ins>
+                    <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                        <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="20%">
+                            <div class="headingMovie">
+                                <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
+                                    <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
+                                        <img src={{movie.imageTwo}}></a>
+                                    <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
+                                        <div class="review">
+                                            <mat-icon>star_border</mat-icon>
+                                            <span>( {{movie.averageUserRating}}/5)</span>
+                                        </div>
+                                        <h1 class="Mname"> <a [routerLink]="'/movie-review/'+movie.titleLink">
+                                                {{movie.title}} </a></h1>
+                                        <h1 class="dname">{{movie.released_on}}</h1>
+                                        <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
+                                                arrow_right_alt</mat-icon></a>
+                                    </div>
                                 </div>
-                                <h1 class="Mname"> {{movie.title}}</h1>
-                                <h1 class="dname">{{movie.released_on}}</h1>
-                                <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
-                                        arrow_right_alt</mat-icon></a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+
+            </mat-tab>
+            <mat-tab label="Bollywood">
+
+                <div class="new-featured-amazon arrive blog">
+                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                        data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                        data-ad-slot="6189008409"></ins>
+                    <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                        <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="20%">
+                            <div class="headingMovie">
+                                <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
+                                    <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
+                                        <img src={{movie.imageTwo}}></a>
+                                    <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
+                                        <div class="review">
+                                            <mat-icon>star_border</mat-icon>
+                                            <span>( {{movie.averageUserRating}}/5)</span>
+                                        </div>
+                                        <h1 class="Mname"> <a [routerLink]="'/movie-review/'+movie.titleLink">
+                                                {{movie.title}} </a></h1>
+                                        <h1 class="dname">{{movie.released_on}}</h1>
+                                        <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
+                                                arrow_right_alt</mat-icon></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </mat-tab>
+            <mat-tab label="Hollywood">
+                <div class="new-featured-amazon arrive blog">
+                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                        data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                        data-ad-slot="6189008409"></ins>
+                    <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                        <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="20%">
+                            <div class="headingMovie">
+                                <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
+                                    <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
+                                        <img src={{movie.imageTwo}}></a>
+                                    <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
+                                        <div class="review">
+                                            <mat-icon>star_border</mat-icon>
+                                            <span>( {{movie.averageUserRating}}/5)</span>
+                                        </div>
+                                        <h1 class="Mname"> <a [routerLink]="'/movie-review/'+movie.titleLink">
+                                                {{movie.title}} </a></h1>
+                                        <h1 class="dname">{{movie.released_on}}</h1>
+                                        <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
+                                                arrow_right_alt</mat-icon></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </mat-tab>
+            <mat-tab label="Punjab">
+                <div class="new-featured-amazon arrive blog">
+                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                        data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                        data-ad-slot="6189008409"></ins>
+                    <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                        <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="20%">
+                            <div class="headingMovie">
+                                <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
+                                    <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
+                                        <img src={{movie.imageTwo}}></a>
+                                    <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
+                                        <div class="review">
+                                            <mat-icon>star_border</mat-icon>
+                                            <span>( {{movie.averageUserRating}}/5)</span>
+                                        </div>
+                                        <h1 class="Mname"> <a [routerLink]="'/movie-review/'+movie.titleLink">
+                                                {{movie.title}} </a></h1>
+                                        <h1 class="dname">{{movie.released_on}}</h1>
+                                        <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
+                                                arrow_right_alt</mat-icon></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </mat-tab>
+
+
+            <mat-tab label="Tamil">
+                <div class="new-featured-amazon arrive blog">
+                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                        data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                        data-ad-slot="6189008409"></ins>
+                    <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                        <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="20%">
+                            <div class="headingMovie">
+                                <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
+                                    <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
+                                        <img src={{movie.imageTwo}}></a>
+                                    <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
+                                        <div class="review">
+                                            <mat-icon>star_border</mat-icon>
+                                            <span>( {{movie.averageUserRating}}/5)</span>
+                                        </div>
+                                        <h1 class="Mname"> <a [routerLink]="'/movie-review/'+movie.titleLink">
+                                                {{movie.title}} </a></h1>
+                                        <h1 class="dname">{{movie.released_on}}</h1>
+                                        <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
+                                                arrow_right_alt</mat-icon></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </mat-tab>
+
+            <mat-tab label="Upcoming Movies">
+                <div class="new-featured-amazon arrive blog">
+                    <ins class="adsbygoogle" style="display:block" data-ad-format="fluid"
+                        data-ad-layout-key="-f9+5v+4m-d8+7b" data-ad-client="ca-pub-7582359274073375"
+                        data-ad-slot="6189008409"></ins>
+                    <div class="blog-data" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+                        <div *ngFor="let movie of movies" class="movie-featured" fxLayout="column" fxFlex="20%">
+                            <div class="headingMovie">
+                                <div class="headingMovieTwo" fxLayout="column" fxLayout.xs="column">
+                                    <a [routerLink]="'/movie-review/'+movie.titleLink" target="_blank">
+                                        <img src={{movie.imageTwo}}></a>
+                                    <div class="overrate" fxFlex.xs="100%" fxFlex="100%">
+                                        <div class="review">
+                                            <mat-icon>star_border</mat-icon>
+                                            <span>( {{movie.averageUserRating}}/5)</span>
+                                        </div>
+                                        <h1 class="Mname"> <a [routerLink]="'/movie-review/'+movie.titleLink">
+                                                {{movie.title}} </a></h1>
+                                        <h1 class="dname">{{movie.released_on}}</h1>
+                                        <a [routerLink]="'/movie-review/'+movie.titleLink"> See Full Detail <mat-icon>
+                                                arrow_right_alt</mat-icon></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </mat-tab>
+
+
+        </mat-tab-group>
+
+
+
 
         <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article"
             data-ad-format="fluid" data-ad-client="ca-pub-7582359274073375" data-ad-slot="6818729641"></ins>
-
     </div>
 </div>
